Basic support for custom classes on paragraphs.

--- a/master.css
+++ b/master.css
@@ -126,9 +126,8 @@ th {
     color: aliceblue;
 }
 
-#finder a .hl {
+#finder .hl {
     text-decoration: underline;
-    color: yellow;
 }
 
 .evaluated {
