Allow prioritized highlights in paragraphs.

--- a/master.css
+++ b/master.css
@@ -142,16 +142,16 @@ th {
     margin-top: -6px;
 }
 
-li.highlight-1 {
+.highlight-1 {
     background-color: lemonchiffon;
 }
 
-li.highlight-2 {
+.highlight-2 {
     background-color: yellow;
     color: darkgoldenrod;
 }
 
-li.highlight-3 {
+.highlight-3 {
     background-color: maroon;
     color: antiquewhite;
 }
