--- a/master.css
+++ b/master.css
@@ -155,3 +155,13 @@ th {
     background-color: maroon;
     color: antiquewhite;
 }
+
+.author-msg {
+    font-style: italic;
+    font-size: .8em;
+    opacity: .7;
+}
+
+h1 + .author-msg {
+    margin-top: -2em;
+}
