Show `Last-Modifed` header value on page.

--- a/master.css
+++ b/master.css
@@ -156,10 +156,11 @@ th {
     color: antiquewhite;
 }
 
-.author-msg {
+.author-msg, .last-mod-msg {
     font-style: italic;
     font-size: .8em;
     opacity: .7;
+    margin: 0;
 }
 
 h1 + .author-msg {
