Highlight `Note` when a paragraph starts as such.

--- a/master.css
+++ b/master.css
@@ -167,6 +167,10 @@ h1 + .author-msg {
     margin-top: -2em;
 }
 
+.note {
+    background-color: yellow;
+}
+
 .page-end {
     border-top: 1px solid rgba(0, 0, 0, .2);
     color: rgba(0, 0, 0, .2);
