Fix page not loading when no front matter is given.

--- a/master.css
+++ b/master.css
@@ -147,8 +147,8 @@ th {
 }
 
 .highlight-2 {
-    background-color: yellow;
-    color: darkgoldenrod;
+    background-color: #ffdf75;
+    color: #704c00;
 }
 
 .highlight-3 {
