Make copy buttons on code blocks a bit smaller.

--- a/master.css
+++ b/master.css
@@ -225,7 +225,9 @@ pre .copy-btn {
     position: absolute;
     right: 0;
     top: 0;
-    opacity: .4;
+    opacity: .7;
+    transform: scale(.8);
+    transform-origin: top right;
 }
 
 pre .copy-btn:hover {
