Added support for [TOC], table of contents.

--- a/master.css
+++ b/master.css
@@ -234,6 +234,10 @@ pre .copy-btn:hover {
     opacity: 1;
 }
 
+.toc a {
+    text-decoration: none;
+}
+
 @media print {
     body {
         border: none;
