--- a/master.css
+++ b/master.css
@@ -76,7 +76,7 @@ table {
     border-collapse: collapse;
 }
 
-table thead, tr:hover {
+th, tr:hover {
     background-color: rgba(0, 0, 0, .05);
 }
 
@@ -268,6 +268,31 @@ h1:hover .link, h2:hover .link, h3:hover .link, h4:hover .link {
 
 .link:hover {
     background-color: #EEE;
+}
+
+.overlay {
+    font-size: 1.1em;
+    background: white;
+    padding: 1em;
+    border: 2px solid black;
+    box-shadow: 0 0 120px rgba(0, 0, 0, .4);
+    min-width: 40%;
+    position: fixed;
+    left: 50%;
+    top: 3em;
+    transform: translateX(-50%);
+}
+
+.overlay th {
+    font-family: monospace;
+}
+
+.overlay :first-child {
+    margin-top: 0;
+}
+
+.overlay :last-child {
+    margin-bottom: 0;
 }
 
 @media print {
