--- a/master.css
+++ b/master.css
@@ -89,8 +89,12 @@ th {
     text-align: left;
 }
 
-table.fancy th {
+table.fancy .sorter {
     cursor: pointer;
+}
+
+table.fancy .column-selector th {
+    cursor: copy;
 }
 
 table.fancy .sort-marker {
