--- a/master.css
+++ b/master.css
@@ -151,6 +151,7 @@ blockquote > p:last-child {
     background: transparent;
     width: 100%;
     margin-bottom: 1em;
+    padding: 3px;
 }
 
 .finder input:focus {
